--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,43 +4,41 @@ linkTitle = "Goldydocs"
 
 +++
 
-{{< blocks/cover title="Welcome to Goldydocs: A Docsy Example Project!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Welcome to Leroy Merlin technology portal" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
-	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
-	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/google/docsy-example">
-		Download <i class="fab fa-github ml-2 "></i>
-	</a>
-	<p class="lead mt-5">Porridge temperature assessment - in the cloud!</p>
+	<p class="lead mt-5">Company's engineering culture site</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
 
 
 {{% blocks/lead color="primary" %}}
-Goldydocs provides a single web UI providing visibility into porridge temperature, chair size, and bed softness metrics! You can even find out who's been eating **your** porridge.
+Our mission is to build **Retailer — technology company-platform**.
 
-(Sadly, Goldydocs isn't a real project, but you can use this site as an example to create your own real websites with [Docsy](http://docsy.dev))
+We as IT want to bring autonomy to product teams, support it with tools and governance to increase productivity and ensure the required level of quality.
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-lightbulb" title="New chair metrics!" %}}
-The Goldydocs UI now shows chair size metrics by default.
 
-Please follow this space for updates!
+{{% blocks/feature icon="fa-users" title="People" %}}
+Personal relationship at the first place
 {{% /blocks/feature %}}
 
-
-{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/google/docsy-example" %}}
-We do a [Pull Request](https://github.com/google/docsy-example/pulls) contributions workflow on **GitHub**. New users are always welcome!
+{{% blocks/feature icon="fa-sitemap" title="Architecture" url="https://github.com/google/docsy-example" %}}
+We are building long-term systems and care about technical debt.
 {{% /blocks/feature %}}
 
-
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/docsydocs" %}}
-For announcement of latest features etc.
+{{% blocks/feature icon="fa-memory" title="Technologies" url="https://twitter.com/docsydocs" %}}
+Сonstantly challenging selection of tools.
 {{% /blocks/feature %}}
 
+{{% blocks/feature icon="fa-microchip" title="Infrastructure" url="https://twitter.com/docsydocs" %}}
+Сonstantly challenging selection of tools.
+{{% /blocks/feature %}}
+
+{{% blocks/feature icon="fa-handshake" title="Processes and Rituals" url="https://twitter.com/docsydocs" %}}
+Сonstantly challenging selection of tools.
+{{% /blocks/feature %}}
 
 {{< /blocks/section >}}
 
