--- a/content/no/_index.html
+++ b/content/no/_index.html
@@ -4,7 +4,7 @@ linkTitle = "TechOS"
 
 +++
 
-{{< blocks/cover title="Dette er TechOS!" image_anchor="top" height="full" >}}
+{{< blocks/cover title="Добро пожаловать в технологии Леруа Мерлен" image_anchor="top" height="full" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Dokumentasjon <i class="fas fa-arrow-alt-circle-right ml-2"></i>
