--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>/technology/</title><link rel=canonical href=/technology/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=/technology/"></head></html>
+<!doctype html><html><head><title>/lmru--tech/</title><link rel=canonical href=/lmru--tech/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=/lmru--tech/"></head></html>
